remove deprecated options and set default difficulty normal